# learning-ai

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: gemini-connect.py
