[project]
name = "learning-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "DONGHAN KWAK",email = "donghankwak@nexon.co.kr"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google (>=3.0.0,<4.0.0)",
    "google-genai (>=1.53.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "learning_ai", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
